// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button(props) renders expected snapshots 1`] = `
Object {
  "background": "#DDD",
  "border": "none",
  "boxSizing": "border-box",
  "cursor": "pointer",
  "outline": undefined,
  "padding": 0,
  "userSelect": "none",
}
`;

exports[`button(props) renders expected snapshots 2`] = `
Object {
  "background": "red",
  "border": "none",
  "boxSizing": "border-box",
  "cursor": "pointer",
  "outline": undefined,
  "padding": 0,
  "userSelect": "none",
}
`;
